@@ -1,11 +1,0 @@
-target(
-  dependencies=[
-    'util/util-zk-common/src/main/scala'
-  ]
-)
-
-target(name='tests',
-  dependencies=[
-    'util/util-zk-common/src/test/scala'
-  ]
-)
