@@ -1,14 +1,0 @@
-junit_tests(
-  dependencies=[
-    'src/java/com/twitter/common/zookeeper:client',
-    'src/java/com/twitter/common/net:util',
-    '3rdparty/jvm/org/jmock',
-    '3rdparty/jvm/junit',
-    '3rdparty/jvm/org/scalatest',
-    'util/util-core/src/main/scala',
-    'util/util-zk-common/src/main/scala',
-    'util/util-zk/src/main/scala:scala',
-  ],
-  fatal_warnings=True,
-  sources=rglobs('*.scala')
-)
