@@ -1,11 +1,11 @@
 junit_tests(
   dependencies=[
-    'src/java/com/twitter/common/io:io',
     '3rdparty/jvm/junit',
+    '3rdparty/jvm/org/apache/zookeeper:zookeeper-server',
     '3rdparty/jvm/org/mockito:mockito-all',
     '3rdparty/jvm/org/scalatest',
+    'util/util-core',
     'util/util-zk-test',
-    '3rdparty/jvm/org/apache/zookeeper:zookeeper-server',
   ],
   fatal_warnings=True,
   sources=rglobs('*.scala')
